--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
+    "asyncpg>=0.30.0",
     "pybit>=5.9.0",
     "python-dotenv>=1.0.1",
     "sqlalchemy>=2.0.38",
