--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "pybit>=5.9.0",
     "python-dotenv>=1.0.1",
     "sqlalchemy>=2.0.38",
+    "pandas>=2.2.0",
+    "tabulate>=0.9.0",
 ]
