--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "sqlalchemy>=2.0.38",
     "pandas>=2.2.0",
     "tabulate>=0.9.0",
+    "psycopg2-binary>=2.9.9",
+    "mysql-connector-python>=8.3.0",
 ]
