--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "mysql-connector-python>=8.3.0",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.12",
+]
