--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "tabulate>=0.9.0",
     "psycopg2-binary>=2.9.9",
     "mysql-connector-python>=8.3.0",
+    "pandas>=2.2.2",
 ]
 
 [dependency-groups]
